# retrobox

./: .gitignore  generate.py  pyproject.toml
.claude/: launch.json  settings.json
config/: dnsmasq.conf  hostapd.conf
gba/: config.py  index.html
nes/: config.py  index.html
psp/: config.py  index.html
retrobox/: __init__.py  generator.py  models.py  statics.py  ws_client.py
server/: __init__.py  gamepad.py  server.py
